<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Game Find Number</string>
    <string name="show_label_hint2">There is a 2 digit number</string>
    <string name="show_label_hint3">There is a 3 digit number</string>
    <string name="show_label_hint4">There is a 4 digit number</string>
    <string name="show_attempts_left">5</string>
    <string name="show_label_msg">Guess!</string>
    <string name="btn_label_guess">Try guess</string>
    <string name="btn_label_restart">Try again</string>
    <string name="msgbox_guessed">Guessed!</string>
    <string name="msgbox_congrats">Congratulations!</string>
    <string name="ok">OK</string>
    <string name="msgbox_More">More!</string>
    <string name="show">Show number</string>
    <string name="restart">Restart</string>
    <string name="msgbox_Less">Less!</string>
    <string name="settings">Settings</string>
    <string-array name="diaps_array">
        <item>@string/_2</item>
        <item>@string/_3</item>
        <item>@string/_4</item>
    </string-array>

    <string name="_2">2 digit</string>
    <string name="_3">3 digit</string>
    <string name="_4">4 digit</string>
    <string name="nameAndSurname">Sergey Yakimovich Ilya Keduk</string>
    <string name="email">ya.sergey137@gmail.com keduk2014@gmail.com</string>
    <string name="university">GRSU</string>
    <string name="nums_diap">diapason</string>
    <string name="cancel">Cancel</string>
    <string name="about">about</string>

</resources>